<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context="com.webmazix.shmooops.Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3.5"
            android:scaleType="center"
            android:src="@drawable/ic_shmooops" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="4.5"
            android:background="@color/theme"
            android:orientation="vertical"
            android:padding="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/pen" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white">

                    <com.neopixl.pixlui.components.edittext.EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/name"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        pixlui:typeface="OpenSans-Regular.ttf"
                        android:id="@+id/ET_name" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <include layout="@layout/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/userdp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white">

                    <com.neopixl.pixlui.components.edittext.EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/username"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        pixlui:typeface="OpenSans-Regular.ttf"
                        android:id="@+id/ET_UserName" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <include layout="@layout/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_lock" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white">

                    <com.neopixl.pixlui.components.edittext.EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:background="@null"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        pixlui:typeface="OpenSans-Regular.ttf"
                        android:id="@+id/ET_password" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <include layout="@layout/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_email" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white">

                    <com.neopixl.pixlui.components.edittext.EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:background="@null"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        pixlui:typeface="OpenSans-Regular.ttf"
                        android:id="@+id/ET_Mail" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <include layout="@layout/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_phone" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white">

                    <com.neopixl.pixlui.components.edittext.EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:background="@null"
                        android:hint="@string/phone"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        pixlui:typeface="OpenSans-Regular.ttf"
                        android:id="@+id/ET_Mobile" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <include layout="@layout/line" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/shadow_button"
                android:layout_weight="1">

                <com.neopixl.pixlui.components.textview.TextView
                    android:id="@+id/BT_SignUp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    pixlui:typeface="OpenSans-Regular.ttf" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.neopixl.pixlui.components.textview.TextView
                    android:id="@+id/BT_signin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:text="@string/alreadyac"
                    android:textColor="@color/brown"
                    android:textStyle="bold"
                    pixlui:typeface="OpenSans-Regular.ttf" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</FrameLayout>