<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context="com.webmazix.shmooops.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="3.5"
            android:scaleType="center"
            android:src="@drawable/ic_shmooops" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="3"
            android:background="@color/theme"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="15">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/userdp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/white"
                    android:paddingTop="4dp"
                    android:textColorHint="@color/white"
                    >

                    <com.neopixl.pixlui.components.edittext.EditText
                       android:id="@+id/ET_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:background="@null"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        pixlui:typeface="OpenSans-Regular.ttf" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <include layout="@layout/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_lock" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:paddingTop="4dp"
                    android:layout_marginLeft="5dp">

                    <com.neopixl.pixlui.components.edittext.EditText
                       android:id="@+id/ET_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:background="@null"
                        android:hint="@string/password"

                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        pixlui:typeface="OpenSans-Regular.ttf" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <include layout="@layout/line" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="6"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/loginAs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="6dp"
                    android:background="@null"
                    android:checked="false"
                    android:gravity="center_vertical"
                    android:text="Login as User"
                    android:textColor="@color/white" />

                <com.neopixl.pixlui.components.textview.TextView
                    android:id="@+id/TV_forgetpass"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical|right"
                    android:text="Forget password?"
                    android:textColor="@color/white"
                    pixlui:typeface="OpenSans-Regular.ttf" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="3.5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.neopixl.pixlui.components.textview.TextView
                    android:id="@+id/TV_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shadow_button"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    pixlui:typeface="OpenSans-Regular.ttf" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                >

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="right"
               >

                <com.neopixl.pixlui.components.textview.TextView
                    android:id="@+id/TV_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sign Up"
                    android:padding="10dp"
                    android:layout_gravity="center|top"
                    android:textColor="@color/brown"
                    android:textStyle="bold"
                    pixlui:typeface="OpenSans-Regular.ttf" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</FrameLayout>
